# paligemma2-detection

./: .gitattributes  LICENSE  README.md  pyproject.toml  run_multiple_inference.sh  setup.sh
assets/: benchmark_results.ipynb  coco_classes2id.yaml  coco_id2class.yaml
assets/predictions/: paligemma2-10b-mix-448_classes_per_call_10.json  paligemma2-10b-pt-224_classes_per_call_1.json  paligemma2-10b-pt-448-finetuned_closed_set.json  paligemma2-10b-pt-448_classes_per_call_1.json  paligemma2-10b-pt-448_classes_per_call_40.json  paligemma2-10b-pt-896_classes_per_call_1.json  paligemma2-28b-pt-448_classes_per_call_4.json  paligemma2-3b-pt-448_classes_per_call_1.json  yolo_v11x.json
configs/: paligemma_coco_benchmark.yaml  paligemma_structured_coco_benchmark.yaml  train.yaml  train_ray.yaml
configs/train/: default.yaml
configs/train/lora/: default.yaml
configs/train/optimizer/: adamw.yaml
configs/train/scheduler/: cosine.yaml
deploy/: coco_benchmark_yolo.ipynb  convert_yolo_to_onnx.ipynb  demo_paligemma.py  demo_yolo.py  yolo_triton_client.py
deploy/triton/: config.pbtxt
docs/: _config.yml  analysis.md  evaluation  evaluation.md  examples.md  index.md  open_class_vs_closed_set.md  paligemma_cs_report.md  paligemma_oc_report.md  yolo_deployment.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
inference/: paligemma_coco_benchmark.py  paligemma_structured_coco_benchmark.py
scripts/: data_pipeline.py  paligemma_coco_benchmark.py  paligemma_structured_coco_benchmark.py  structured_decoding.py  train.py  train_ray.py
training/: data_pipeline.py  train.py
